applications/echo/namespace-echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: echo
spec: {}
status: {}
