applications/echo/service-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: http-svc
  name: http-svc
spec:
  ports:
    - name: port-1
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: http-svc
